--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
