--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/select": "^2.2.7",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "axios": "^1.7.7",
+    "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
