--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-to-pdf": "^1.0.1",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
