--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "@nextui-org/theme": "^2.2.11",
     "axios": "^1.7.7",
     "framer-motion": "^11.12.0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
