--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.12.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
@@ -28,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-to-pdf": "^1.0.1",
+    "react-to-print": "^3.0.2",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
